complete seo impl
